# cohort-data-platform

./: .env.docker.example  .gitattributes  .gitignore  DEPLOYMENT.md  DOCS.md  GIT_GUIDE.md  LICENSE  ORBSTACK.md  PROJECT_REVIEW.md  QUICKSTART.md  README.md  create-admin.sh  docker-compose.prod.yml  docker-compose.yml  plan.md  start.sh
.githooks/: commit-msg
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_assessment_templates.py  003_add_sample_time.py  004_add_multi_study_support.py  005_create_default_study.py  20260402_120000_add_ai_extracted_data.py
backend/app/: main.py
backend/app/api/: assessments.py  auth.py  export.py  files.py  studies.py  subjects.py  templates.py  users.py  visits.py
backend/app/core/: config.py  database.py  permissions.py
backend/app/models/: tables.py
backend/app/schemas/: schemas.py
backend/app/services/: ai_extractor.py
backend/data/: .gitkeep
frontend/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/data/: page.tsx
frontend/src/app/enter/: page.tsx
frontend/src/app/export/: layout.tsx  page.tsx
frontend/src/components/: header.tsx
frontend/src/lib/: api.ts  auth.ts  files.ts  studies.ts  subjects.ts  templates.ts  visits.ts
frontend/src/types/: index.ts
nginx/: nginx.conf
scripts/: backup.sh  health-check.sh
(+17 files in other folders)
